# ControlLibraryDemo

./: .gitignore  README.md
control-toolbox/ct/: install_hpipm.sh
control-toolbox/ct_optcon/examples/: CMakeLists.txt
control_demo/: CMakeLists.txt  package.xml
control_demo/acado_invpend_model/: CMakeLists.txt  invpend_model.cpp  invpend_model_codegen
control_demo/acado_invpend_model/invpend_mpc_codegen/: acado_common.h  acado_integrator.c  acado_solver.c
control_demo/acado_quad_model/: CMakeLists.txt  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
control_demo/acado_quad_model/quadrotor_mpc_codegen/: acado_common.h  acado_integrator.c  acado_solver.c
control_demo/include/control_demo/: acado_invpend_wrapper.hpp
control_demo/launch/: acado_invpend_mpc.launch
control_demo/parameters/: acado_invpend_mpc.yaml  cost.info  invpend_cost.info  invpend_solver.info  solver.info
control_demo/src/: acado_invpend_mpc.cpp  ct_invpend_lqr.cpp  ct_invpend_mpc.cpp  ct_invpend_pid.cpp  ct_quad_circle_mpc.cpp
invpend_experiment/: .gitignore  README.md
invpend_experiment/invpend_control/: CMakeLists.txt  package.xml
invpend_experiment/invpend_control/config/: invpend_control.yaml
invpend_experiment/invpend_control/launch/: invpend_control.launch  load_invpend.launch
invpend_experiment/invpend_description/: CMakeLists.txt  package.xml
invpend_experiment/invpend_description/launch/: invpend.rviz  invpend_rviz.launch
invpend_experiment/invpend_description/urdf/: invpend.gazebo  invpend.xacro  invpend.xml
invpend_experiment/invpend_gazebo/: CMakeLists.txt  package.xml
invpend_experiment/invpend_gazebo/launch/: invpend_world.launch
invpend_experiment/invpend_gazebo/worlds/: invpend.world
