<?xml version="1.0"?>
<package format="2">
  <name>control_demo</name>
  <version>0.0.0</version>
  <description>The control_demo package</description>

  <maintainer email="907711755@qq.com">Baozhe Zhang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ct_core</build_depend>
  <build_depend>ct_optcon</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>ct_core</build_export_depend>
  <build_export_depend>ct_optcon</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>ct_core</exec_depend>
  <exec_depend>ct_optcon</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
