<?xml version="1.0"?>
<package>
  <name>invpend_control</name>
  <version>0.0.0</version>
  <description>The invpend_control package</description>

  <maintainer email="linzhank@gmail.com">linZHank</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/linzhank/invpend_experiment</url>

  <author email="linzhank@gmail.com">linZHank</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
